[project]
name = "envscout"
version = "0.1.0"
description = "Cross-platform tool to discover and manage Python virtual environments"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Adolfo J. Cardozo S.", email = "ajcs.developer@gmail.com" },
]
keywords = [
    "virtualenv",
    "venv",
    "conda",
    "poetry",
    "uv",
    "environment",
    "python",
    "cli",
    "tool",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = ["typer>=0.12.0", "rich>=13.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "mypy>=1.10.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/acdeveloper-sci/envscout"
Repository = "https://github.com/acdeveloper-sci/envscout"
Issues = "https://github.com/acdeveloper-sci/envscout/issues"
Documentation = "https://acdeveloper-sci.github.io/envscout/"

[project.scripts]
envscout = "envscout.interfaces.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "mkdocs-material>=9.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["envscout"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=envscout --cov-report=term-missing"

[tool.coverage.run]
source = ["envscout"]
omit = ["tests/*"]
